--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,19 @@
 {
-    "name": "gplcart/installer",
-    "type": "gplcart-module",
-    "description": "Allows to upload and download modules from various external sources",
-    "keywords": ["gplcart", "ecommerce", "shopping cart", "gplcart module", "php"],
-    "license": "GPL-3.0+",
-    "require": {
-        "gplcart/composer-module-installer": "*",
-        "ext-zip": "*"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+  "name": "gplcart/installer",
+  "type": "gplcart-module",
+  "description": "Allows to upload and download modules from various external sources",
+  "keywords": [
+    "gplcart",
+    "ecommerce",
+    "shopping cart",
+    "gplcart module",
+    "php"
+  ],
+  "license": "GPL-3.0-or-later",
+  "require": {
+    "gplcart/composer-module-installer": "*",
+    "ext-zip": "*"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
